# copypasta

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.builds/: freebsd.yml  linux.yml  rustfmt.yml
.github/workflows/: ci.yml
ci/: script.sh
examples/: hello_world.rs  primary_selection.rs  wayland.rs
src/: android_clipboard.rs  common.rs  lib.rs  nop_clipboard.rs  osx_clipboard.rs  wayland_clipboard.rs  windows_clipboard.rs  x11_clipboard.rs
tests/: concurrency.rs  failing.rs  main.rs
