[package]
name = "copypasta"
version = "0.10.0"
authors = ["Christian Duerr <contact@christianduerr.com>"]
description = "copypasta is a cross-platform library for getting and setting the contents of the OS-level clipboard."
repository = "https://github.com/alacritty/copypasta"
documentation = "https://docs.rs/copypasta"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["clipboard"]
exclude = ["/.travis.yml"]
edition = "2021"
rust-version = "1.65.0"

[features]
default = ["x11", "wayland"]
x11 = ["x11-clipboard"]
wayland = ["smithay-clipboard"]

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="ios", target_os="emscripten"))))'.dependencies]
x11-clipboard = { version = "0.8.1", optional = true }
smithay-clipboard = { version = "0.7.0", optional = true }
